--- a/style.css
+++ b/style.css
@@ -31,6 +31,25 @@ figure {
   color: #f5f5f5;
 }
 
+.hero .herotitle {
+  font-size: 3rem;
+}
+@media (max-width: 425px) {
+  .hero .herotitle {
+    font-size: 2.4rem;
+  }
+}
+.hero .banner-sm {
+  width: 50%;
+}
+.hero .banner-lg {
+  width: 100%;
+}
+.hero .happyhome-count {
+  font-size: 4rem;
+  font-weight: 500;
+}
+
 :root,
 [data-bs-theme=light] {
   --bs-blue: #0d6efd;
